Code Cleanup
- Replaced new Float(…) with Float.valueOf
- ditto for Double
- Used System.arraycopy instead of DIY loop
- Used sublists clear instead of DIY loop
- Used parameterized constructor of LinkedList instead of new …() and .addAll
- Used SingletonList instead of Arrays.asList
- Used StringBuilder instead of String concatenation in loops